--- a/irtex/requirements.txt
+++ b/irtex/requirements.txt
@@ -1,14 +1,84 @@
+appnope==0.1.0
+attrs==19.3.0
+backcall==0.1.0
+bleach==3.1.5
 bson==0.5.8
+certifi==2020.4.5.1
+chardet==3.0.4
+cycler==0.10.0
 dataclasses==0.6
+decorator==4.4.2
+defusedxml==0.6.0
 Django==2.2.12
+django-cors-headers==3.2.1
 django-rest-framework==0.1.0
 django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.11.0
 djongo==1.3.0
+entrypoints==0.3
+gluoncv==0.7.0
+graphviz==0.8.4
+idna==2.9
+importlib-metadata==1.6.0
+imutils==0.5.3
+ipykernel==5.2.1
+ipython==7.13.0
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.0
+Jinja2==2.11.2
+joblib==0.14.1
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.3
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib==3.2.1
+mistune==0.8.4
 mongoengine==0.19.1
+mxnet==1.6.0
+nbconvert==5.6.1
+nbformat==5.0.6
+notebook==6.0.3
+numpy==1.18.3
+opencv-contrib-python==4.2.0.34
+packaging==20.3
+pandas==1.0.3
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==7.1.2
+portalocker==1.7.0
+prometheus-client==0.7.1
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
 pymongo==3.10.1
+pyparsing==2.4.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+pyzmq==19.0.0
+qtconsole==4.7.3
+QtPy==1.9.0
+requests==2.23.0
 rest-meets-djongo==0.0.12
+scikit-learn==0.22.2.post1
+scipy==1.4.1
+Send2Trash==1.5.0
 six==1.14.0
+sklearn==0.0
 sqlparse==0.2.4
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+tqdm==4.45.0
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.1.9
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp==3.1.0
