changes to gitignore to not include dataset and compiled code files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ irtex-client/
 
 
 pyvenv.cfg
+/irtex/dataset/.ipynb_checkpoints/
+/irtex/dataset/cifar-10-batches-py/
+/irtex/dataset/cifar10/
+/share/
+/etc/
