--- a/irtex/requirements.txt
+++ b/irtex/requirements.txt
@@ -12,6 +12,7 @@ defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==2.2.12
 django-cors-headers==3.2.1
+django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-framework-mongoengine==3.4.1
 djangorestframework==3.11.0
@@ -57,6 +58,7 @@ Pillow==7.1.2
 portalocker==1.7.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 ptyprocess==0.6.0
 Pygments==2.6.1
