--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.2.0
+mahotas==1.4.9
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
