--- a/requirements.txt
+++ b/requirements.txt
@@ -78,7 +78,9 @@ scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
+scikit-image==0.17.2
 sqlparse==0.2.4
+tensorflow==2.2.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
