--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
+absl-py==0.9.0
 appnope==0.1.0
+astunparse==1.6.3
 attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.5
 bson==0.5.8
+cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
 cycler==0.10.0
@@ -19,10 +22,19 @@ djangorestframework==3.11.0
 djongo==1.3.0
 dnspython==1.16.0
 entrypoints==0.3
+future==0.18.2
+gast==0.3.3
 gluoncv==0.7.0
+google-auth==1.15.0
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
 graphviz==0.8.4
+grpcio==1.29.0
 gunicorn==20.0.4
+h5py==2.10.0
 idna==2.9
+imagecodecs==2020.2.18
+imageio==2.8.0
 importlib-metadata==1.6.0
 imutils==0.5.3
 ipykernel==5.2.1
@@ -37,8 +49,11 @@ jupyter==1.0.0
 jupyter-client==6.1.3
 jupyter-console==6.1.0
 jupyter-core==4.6.3
+Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
+lpproj==0.1
 mahotas==1.4.9
+Markdown==3.2.2
 MarkupSafe==1.1.1
 matplotlib==3.2.1
 mistune==0.8.4
@@ -46,9 +61,13 @@ mongoengine==0.19.1
 mxnet==1.6.0
 nbconvert==5.6.1
 nbformat==5.0.6
+networkx==2.4
 notebook==6.0.3
 numpy==1.18.3
+oauthlib==3.1.0
 opencv-contrib-python==4.2.0.34
+opencv-contrib-python-nonfree==4.1.1.1
+opt-einsum==3.2.1
 packaging==20.3
 pandas==1.0.3
 pandocfilters==1.4.2
@@ -59,37 +78,52 @@ Pillow==7.1.2
 portalocker==1.7.0
 prometheus-client==0.7.1
 prompt-toolkit==3.0.5
+protobuf==3.12.1
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 Pygments==2.6.1
 pymongo==3.10.1
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2019.3
+PyWavelets==1.1.1
 pyzmq==19.0.0
 qtconsole==4.7.3
 QtPy==1.9.0
 requests==2.23.0
+requests-oauthlib==1.3.0
 rest-meets-djongo==0.0.12
+rsa==4.0
+scikit-image==0.17.2
 scikit-learn==0.22.2.post1
 scipy==1.4.1
 Send2Trash==1.5.0
 six==1.14.0
 sklearn==0.0
-scikit-image==0.17.2
 sqlparse==0.2.4
+tensorboard==2.2.1
+tensorboard-plugin-wit==1.6.0.post3
 tensorflow==2.2.0
-tf2cv==0.0.11
+tensorflow-estimator==2.2.0
+termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
+tf2cv==0.0.11
+tifffile==2020.5.11
+torch==1.5.0
+torchvision==0.6.0
 tornado==6.0.4
 tqdm==4.45.0
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.1.9
 webencodings==0.5.1
+Werkzeug==1.0.1
 whitenoise==5.0.1
 widgetsnbextension==3.5.1
+wrapt==1.12.1
 zipp==3.1.0
