--- a/.gitignore
+++ b/.gitignore
@@ -51,8 +51,8 @@ iretx/__pycache__/
 /resnet20_cifar_10_features/Untitled.ipynb
 /resnet20_cifar_10_features/.ipynb_checkpoints/Untitled-checkpoint.ipynb
 /segmentation/masks/
-/concat_cifar_pascal.pkl
-/concat_pickle_pascal.pkl
+/concat_cifar.pkl
+/concat_pascal.pkl
 /segmentation/CIFAR visual explanation.ipynb
 /segmentation/.ipynb_checkpoints/CIFAR visual explanation-checkpoint.ipynb
 /segmentation/cifar_segmentation_60k.ipynb
